# Beatbase

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  genius_suche.md  getting-started.md  troubleshooting.md
docs/modules/: genius.md  hotline-callcenter.md  ipc.md  songstats.md  spotify.md  tunebat.md  watcher.md
src/: GEMINI.md
src/beatbase/: __main__.py
src/beatbase/core/: config.py  db.py  hotline.py  songs_db.py  watcher.py
src/beatbase/extractor/: batch.py  browser_pool.py  callcenter.py  hotline.py  orchestrator.py  parallel.py  queue.py  search_queue.py
src/beatbase/genius/: __main__.py  config.py  genius.py  validator.py
src/beatbase/processor/: external_db.py  importer.py  songs_db.py
src/beatbase/shared/: config.py  now_playing.py
src/beatbase/songbpm/: songbpm.py
src/beatbase/songstats/: __main__.py  config.py  songstats.py  validator.py
src/beatbase/spotify/: spotify_current.py
src/beatbase/tunebat/: __main__.py  config.py  db.py  tunebat.py  validator.py
tests/: conftest.py
tests/core/: test_hotline.py  test_songs_db.py
tests/extractor/: test_batch.py  test_browser_pool.py  test_callcenter.py  test_hotline.py  test_orchestrator_run_extractor.py  test_parallel.py  test_search_queue.py
tests/genius/: test_extractor.py
tests/processor/: test_songs_db.py
tests/shared/: test_now_playing.py
tests/songbpm/: test_extractor.py
tests/songstats/: test_overview.py
tests/tunebat/: test_db.py
tests/utils/: test_callcenter.py  test_now_playing.py  test_search_variations.py  test_validator.py
(+62 files in other folders)
