[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beatbase"
version = "0.1.0"
description = "Ein neues Python Projekt"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Leon", email = "leon@example.com" }
]
dependencies = [
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-playwright",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errors, Pyflakes, Isort

[tool.pytest.ini_options]
testpaths = ["tests"]
# WHY: --import-mode=importlib erlaubt mehrere test_*.py mit gleichem basename
# in verschiedenen Subdirectories ohne __init__.py.
addopts = "-ra --strict-markers --import-mode=importlib"
markers = [
    "integration: braucht externe Resourcen (Netzwerk, echtes HTML, Browser)",
]
